--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ bimap = "0.5"
 bincode = "1.3"
 bitflags = "1.2"
 log = "0.4"
+rand = "0.8"
+rand_pcg = "0.3"
 serde = { version = "1.0", features = ["derive"] }
