--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ log = "0.4"
 rand = "0.8"
 rand_pcg = "0.3"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+approx = "0.4"
