--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ lto = "fat"
 
 [dependencies]
 anyhow = "1.0"
-bevy = "0.8"
+bevy = "0.9"
 bincode = "1.3"
 bitflags = "1.3"
 clap = { version = "4.0", features = ["derive"] }
 config = "0.13"
+derive_more = "0.99"
 humantime-serde = "1.1"
 log = "0.4"
 rand = "0.8"
