--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ lto = "fat"
 anyhow = "1.0"
 bevy = "0.10"
 bincode = "1.3"
-bitflags = "1.3"
 clap = { version = "4.2", features = ["derive"] }
 config = "0.13"
 derive_more = "0.99"
+enumset = { version = "1.1", features = ["serde"] }
 humantime-serde = "1.1"
 log = "0.4"
 rand = "0.8"
