--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ config = "0.13"
 derive_more = "0.99"
 enumset = { version = "1.1", features = ["serde"] }
 humantime-serde = "1.1"
+lazy_static = "1.4"
 log = "0.4"
 rand = "0.8"
 rand_pcg = "0.3"
+regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
