--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ enumset = { version = "1.1", features = ["serde"] }
 lazy_static = "1.4"
 log = "0.4"
 rand = "0.8"
+rand_distr = "0.4"
 rand_pcg = "0.3"
 regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
