--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ lto = "fat"
 [dependencies]
 anyhow = "1.0"
 bevy = "0.10"
+bevy_prototype_debug_lines = "0.10"
 config = "0.13"
 derive_more = "0.99"
 enumset = { version = "1.1", features = ["serde"] }
