--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Aunmag <aunmag@gmail.com>"]
 
-[profile.release]
-codegen-units = 1
-lto = "fat"
+# [profile.release]
+# codegen-units = 1
+# lto = "fat"
 
 [dependencies]
 anyhow = "1.0"
@@ -22,6 +22,7 @@ rand_distr = "0.4"
 rand_pcg = "0.3"
 regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
+strum = { version = "0.25", features = ["derive"] }
 
 [dev-dependencies]
 approx = "0.5"
