--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Aunmag <aunmag@gmail.com>"]
 [dependencies]
 anyhow = "1.0"
 bevy = "0.11"
+chrono = "0.4"
 config = "0.13"
 derive_more = "0.99"
 enumset = { version = "1.1", features = ["serde"] }
