--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,11 @@
+[game]
+modes = [
+    "waves",
+    # "debug",
+    # "bench",
+    # "laser_sight",
+]
+
 [display]
 fullscreen = true
 window_size_x = 800
@@ -9,8 +17,3 @@ sources = 128
 
 [controls]
 mouse_sensitivity = 0.003
-
-[misc]
-laser_sight = false
-debug = false
-bench = false
