--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ authors = ["Aunmag <aunmag@gmail.com>"]
 anyhow = "1.0"
 bevy = "0.12"
 chrono = "0.4"
-config = "0.14"
 derive_more = "0.99"
 enumset = { version = "1.1", features = ["serde"] }
 lazy_static = "1.4"
@@ -17,6 +16,7 @@ rand_distr = "0.4"
 rand_pcg = "0.3"
 regex = "1.8"
 serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 
 [dev-dependencies]
 approx = "0.5"
