--- a/settings.toml
+++ b/settings.toml
@@ -1,8 +1,8 @@
 [game]
 difficulty = 1.0 # 0.8 - easy, 1.0 - medium, 1.2 - hard
 modes = [
-    "waves",
-    # "debug",
+    # "waves",
+    "debug",
     # "bench",
     # "laser_sight",
 ]
