--- a/settings.toml
+++ b/settings.toml
@@ -2,7 +2,7 @@
 difficulty = 1.0 # 0.8 - easy, 1.0 - medium, 1.2 - hard
 modes = [
     "waves",
-    # "debug",
+    "debug",
     # "bench",
     # "laser_sight",
 ]
